; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_add_file_ondisk.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_add_file_ondisk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*)* }
%struct.stat = type { i32 }

@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@ENOTDIR = common dso_local global i64 0, align 8
@GIT_ERROR_CONFIG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"failed to stat '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_add_file_ondisk(i32* %0, i8* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_5__*, align 8
  %13 = alloca %struct.stat, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %12, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %5
  %18 = load i8*, i8** %8, align 8
  %19 = icmp ne i8* %18, null
  br label %20

20:                                               ; preds = %17, %5
  %21 = phi i1 [ false, %5 ], [ %19, %17 ]
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i8*, i8** %8, align 8
  %25 = call i32 @p_stat(i8* %24, %struct.stat* %13)
  store i32 %25, i32* %14, align 4
  %26 = load i32, i32* %14, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %40

28:                                               ; preds = %20
  %29 = load i64, i64* @errno, align 8
  %30 = load i64, i64* @ENOENT, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %40

32:                                               ; preds = %28
  %33 = load i64, i64* @errno, align 8
  %34 = load i64, i64* @ENOTDIR, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %40

36:                                               ; preds = %32
  %37 = load i32, i32* @GIT_ERROR_CONFIG, align 4
  %38 = load i8*, i8** %8, align 8
  %39 = call i32 @git_error_set(i32 %37, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %38)
  store i32 -1, i32* %6, align 4
  br label %61

40:                                               ; preds = %32, %28, %20
  %41 = load i8*, i8** %8, align 8
  %42 = call i64 @git_config_backend_from_file(%struct.TYPE_5__** %12, i8* %41)
  %43 = icmp slt i64 %42, 0
  br i1 %43, label %44, label %45

44:                                               ; preds = %40
  store i32 -1, i32* %6, align 4
  br label %61

45:                                               ; preds = %40
  %46 = load i32*, i32** %7, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %48 = load i32, i32* %9, align 4
  %49 = load i32*, i32** %10, align 8
  %50 = load i32, i32* %11, align 4
  %51 = call i32 @git_config_add_backend(i32* %46, %struct.TYPE_5__* %47, i32 %48, i32* %49, i32 %50)
  store i32 %51, i32* %14, align 4
  %52 = icmp slt i32 %51, 0
  br i1 %52, label %53, label %60

53:                                               ; preds = %45
  %54 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %55 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %54, i32 0, i32 0
  %56 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %55, align 8
  %57 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %58 = call i32 %56(%struct.TYPE_5__* %57)
  %59 = load i32, i32* %14, align 4
  store i32 %59, i32* %6, align 4
  br label %61

60:                                               ; preds = %45
  store i32 0, i32* %6, align 4
  br label %61

61:                                               ; preds = %60, %53, %44, %36
  %62 = load i32, i32* %6, align 4
  ret i32 %62
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @p_stat(i8*, %struct.stat*) #1

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1

declare dso_local i64 @git_config_backend_from_file(%struct.TYPE_5__**, i8*) #1

declare dso_local i32 @git_config_add_backend(i32*, %struct.TYPE_5__*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
